--- a/main.css
+++ b/main.css
@@ -1,3 +1,50 @@
 html, body {
   margin: 0;
-  font: 1.4em/1.6 "jaf-facitweb", sans-serif; }
+  padding: 0; }
+
+html {
+  font: 1.4em/1.7 "Lato", sans-serif;
+  font-weight: 400;
+  background-image: url(meeting.jpg);
+  background-size: cover; }
+
+section {
+  margin: 0 auto;
+  padding: 1em 0.7em 1.5em 0.7em;
+  max-width: 32em;
+  color: white;
+  background: rgba(0, 0, 0, 0.85); }
+
+h1, h2 {
+  font: 3em/1 "Noticia Text", serif;
+  z-index: 100; }
+  h1:after, h2:after {
+    display: block;
+    position: relative;
+    z-index: 1;
+    top: 100%;
+    content: '';
+    width: 100%;
+    height: 0.1em;
+    background-color: coral; }
+
+/* Button classes */
+button {
+  display: block;
+  padding: 0.2em;
+  font: 1.2em/1 sans-serif;
+  color: coral;
+  background: white;
+  border: 2px solid coral; }
+
+button.center {
+  margin: 0 auto; }
+
+/* Helper classes for toggling visibility */
+.visible {
+  display: block;
+  visibility: visible; }
+
+.hidden {
+  display: none;
+  visibility: hidden; }
