--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -44,6 +44,16 @@ button.center {
   margin: 0 auto;
 }
 
+input {
+  width: auto;
+  height: 2em;
+  border-radius: 4px;
+  padding: 0.3em 1em;
+  color: white;
+  background-color: rgba(0,0,0,0.8);
+  border: 1px solid white;
+}
+
 /* Helper classes for toggling visibility */
 .visible {
   display: block;
