--- a/main.css
+++ b/main.css
@@ -1,24 +1,30 @@
 html, body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  width: 100%;
+  height: 100%; }
 
 html {
   font: 1.4em/1.7 "Lato", sans-serif;
-  font-weight: 400;
+  font-weight: 400; }
+
+body {
   background-image: url(meeting.jpg);
-  background-size: cover; }
+  background-size: cover;
+  background-attachment: fixed; }
 
 section {
   margin: 0 auto;
-  padding: 1em 0.7em 1.5em 0.7em;
-  max-width: 32em;
+  padding: 1em 2em 1.5em 2em;
+  max-width: 40em;
+  min-height: 100%;
   color: white;
   background: rgba(0, 0, 0, 0.85); }
 
-h1, h2 {
+h1 {
   font: 3em/1 "Noticia Text", serif;
   z-index: 100; }
-  h1:after, h2:after {
+  h1:before {
     display: block;
     position: relative;
     z-index: 1;
@@ -28,26 +34,73 @@ h1, h2 {
     height: 0.1em;
     background-color: coral; }
 
+h2 {
+  font: 1.9/1 "Lato", san-serif;
+  font-weight: 700; }
+
+p {
+  margin-bottom: 0.5em; }
+
 /* Button classes */
 button {
   display: block;
-  padding: 0.2em;
-  font: 1.2em/1 sans-serif;
+  padding: 0.2em 0.5em;
+  font: 1.2em/1 "Lato", sans-serif;
   color: coral;
   background: white;
-  border: 2px solid coral; }
+  border: 2px solid coral;
+  border-radius: 1em; }
 
 button.center {
   margin: 0 auto; }
 
+.container {
+  width: 100%; }
+
+#order-form {
+  margin: 0 auto; }
+
 input {
+  text-align: center;
+  float: left;
+  clear: both;
   width: auto;
   height: 2em;
-  border-radius: 4px;
+  font-size: 1em;
+  border-radius: 0em;
   padding: 0.3em 1em;
   color: white;
   background-color: rgba(0, 0, 0, 0.8);
   border: 1px solid white; }
+
+.mile-supplies {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center; }
+  .mile-supplies li {
+    display: inline-block;
+    margin: 0.1em;
+    padding: 0.2em 1em;
+    border: 1px solid grey;
+    border-radius: 1em;
+    background-color: black;
+    color: white; }
+    .mile-supplies li.reward {
+      background-color: rgba(100, 100, 0, 0.7); }
+    .mile-supplies li em {
+      color: coral; }
+
+#price-table {
+  width: 100%; }
+  #price-table th {
+    font-family: "Noticia Text", serif;
+    color: rgba(255, 255, 255, 0.8);
+    border-bottom: 1px dashed white; }
+  #price-table td {
+    text-align: center; }
+  #price-table tr:nth-child(even) {
+    background-color: rgba(100, 100, 100, 0.3); }
 
 /* Helper classes for toggling visibility */
 .visible {
