--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box; }
+
 html, body {
   margin: 0;
   padding: 0;
@@ -55,7 +58,8 @@ button.center {
   margin: 0 auto; }
 
 .container {
-  width: 100%; }
+  margin: 0 auto;
+  max-width: 100%; }
 
 #order-form {
   margin: 0 auto; }
@@ -63,8 +67,8 @@ button.center {
 input {
   text-align: center;
   float: left;
-  clear: both;
-  width: auto;
+  clear: none;
+  width: 4em;
   height: 2em;
   font-size: 1em;
   border-radius: 0em;
@@ -72,6 +76,10 @@ input {
   color: white;
   background-color: rgba(0, 0, 0, 0.8);
   border: 1px solid white; }
+
+#order-submit {
+  clear: both;
+  width: 12em; }
 
 .mile-supplies {
   padding: 0;
@@ -81,7 +89,7 @@ input {
   .mile-supplies li {
     display: inline-block;
     margin: 0.1em;
-    padding: 0.2em 1em;
+    padding: 0.8em 1em;
     border: 1px solid grey;
     border-radius: 1em;
     background-color: black;
@@ -92,7 +100,8 @@ input {
       color: coral; }
 
 #price-table {
-  width: 100%; }
+  width: 100%;
+  margin: 0 0 1em 0; }
   #price-table th {
     font-family: "Noticia Text", serif;
     color: rgba(255, 255, 255, 0.8);
