--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -61,7 +65,8 @@ button.center {
   margin: 0 auto;
 }
 .container {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 100%;
 }
 #order-form {
   margin: 0 auto;
@@ -69,8 +74,8 @@ button.center {
 input {
   text-align: center;
   float: left;
-  clear: both;
-  width: auto;
+  clear: none;
+  width: 4em;;
   height: 2em;
   font-size: 1em;
   border-radius: 0em;
@@ -78,6 +83,12 @@ input {
   color: white;
   background-color: rgba(0,0,0,0.8);
   border: 1px solid white;
+}
+
+#order-submit {
+  clear: both;
+  width: 12em;
+
 }
 
 .mile-supplies {
@@ -88,7 +99,7 @@ input {
   li {
     display: inline-block;
     margin:0.1em;
-    padding:0.2em 1em;
+    padding:0.8em 1em;
     border: 1px solid grey;
     border-radius: 1em;
     background-color: black;
@@ -105,6 +116,7 @@ input {
 // Price Table
 #price-table {
   width: 100%;
+  margin: 0 0 1em 0;
   th {
     font-family: "Noticia Text", serif;
     color: rgba(255,255,255,0.8);
