--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -22,6 +22,7 @@ section {
   padding: 1em 2em 1.5em 2em;
   max-width: 40em;
   min-height: 100%;
+  // height: auto;
   color: white;
   background: rgba(0,0,0,0.85);
 }
@@ -52,21 +53,22 @@ p {
 }
 
 /* Button classes */
-button {
-  display: block;
+.button {
+  display: inline-block;
   padding: 0.2em 0.5em;
   font: 1.2em/1 "Lato", sans-serif;
   color: coral;
   background: rgba(255,255,255,0.9);
   border: 2px solid coral;
   border-radius: 1em;
+
   &:hover {
     border: 2px solid white;
     background: rgba(0,0,0,0.2);
     color: white;
   }
 }
-button.center {
+.button.center {
   margin: 0 auto;
 }
 .container {
@@ -74,6 +76,7 @@ button.center {
   max-width: 100%;
 }
 #order-form {
+  display: inline-block;
   margin: 0 auto;
 }
 input {
@@ -92,7 +95,7 @@ input {
 }
 
 #order-submit {
-  clear: both;
+  // clear: both;
   width: 12em;
 
 }
@@ -126,7 +129,7 @@ input {
   th {
     font-family: "Noticia Text", serif;
     color: rgba(255,255,255,0.8);
-    border-bottom: 1px dashed white;
+    // border-bottom: 1px dashed white;
   }
   td {
     text-align: center;
