--- a/main.css
+++ b/main.css
@@ -86,12 +86,12 @@ input {
 #order-submit {
   width: 12em; }
 
-.mile-supplies {
+.mile-supplies, .results .order ul {
   padding: 0;
   margin: 0;
   list-style: none;
   text-align: center; }
-  .mile-supplies li {
+  .mile-supplies li, .results .order ul li {
     display: inline-block;
     margin: 0.1em;
     padding: 0.8em 1em;
@@ -99,9 +99,9 @@ input {
     border-radius: 1em;
     background-color: black;
     color: white; }
-    .mile-supplies li.reward {
+    .mile-supplies li.reward, .results .order ul li.reward {
       background-color: rgba(100, 100, 0, 0.7); }
-    .mile-supplies li em {
+    .mile-supplies li em, .results .order ul li em {
       color: coral; }
 
 #price-table {
@@ -114,6 +114,34 @@ input {
     text-align: center; }
   #price-table tr:nth-child(even) {
     background-color: rgba(100, 100, 100, 0.3); }
+
+.results {
+  display: inline-block;
+  width: 45%;
+  padding: 0.3em;
+  margin-top: -3em;
+  float: left; }
+  .results:nth-child(odd) {
+    margin-left: 1em; }
+  .results .order ul {
+    font-size: 0.6em; }
+
+.win-title {
+  font: 0.5em/1 'Lato', sans-serif;
+  font-weight: 100;
+  margin: 0.5em;
+  padding: 0.5em;
+  vertical-align: top;
+  background-color: rgba(0, 100, 30, 0.7);
+  border-radius: 1em;
+  border: 2px solid #00641e; }
+
+.revenue {
+  font: 2em/1 "Noticia Text", serif;
+  margin: 0.2em 0 0.2em 0;
+  text-align: center;
+  color: #646400;
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4); }
 
 /* Helper classes for toggling visibility */
 .visible {
